--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         </div>
         <form id = "form">
           <input id = "email" name = "email" type = "text" placeholder="email@company.com">
-          <input id = "inputError" name = "emailTwo" type = "text" class = "inputError" placeholder="ash#loremcompany.com">
+
+          <!--<input id = "inputError" name = "emailTwo" type = "text" class = "inputError" placeholder="ash#loremcompany.com"> -->
           <div class="buttonContain">
             <button id="submit" type = "submit" class="mButton">Subscribe to monthly newsletter</button>
           </div>
