--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div id = "success" class = "success">
       <img class="successImg" src="/assets/images/icon-success.svg" />
       <h1 class="thanks">Thanks for subscribing!</h1>
-      <p class="confirmation">A confirmation email has been sent to <b>ash@lorecompany.com.</b> Please open it and click the button inside to confirm your subscription</p>
-      <button class="sButton">Dismiss Message</button>
+      <p class="confirmation">A confirmation email has been sent to <b><span id = "userInput">ash@lorecompany.com</span></b>. Please open it and click the button inside to confirm your subscription</p>
+      <button id = "dButton" class="sButton" type = "button">Dismiss Message</button>
     </div>
     
   </main>
