--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </form>
       </section>
     </div>
-    <img class="newsletter__img2" src="/assets/images/illustration-sign-up-desktop.svg" alt="computer images" />
+    <img id="newsTwo" class="newsletter__img2" src="/assets/images/illustration-sign-up-desktop.svg" alt="computer images" />
     <div id = "success" class = "success">
       <img class="successImg" src="/assets/images/icon-success.svg" />
       <h1 class="thanks">Thanks for subscribing!</h1>
